--- a/pom.xml
+++ b/pom.xml
@@ -95,19 +95,19 @@
 		
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://52.53.227.31:8191/landmark/repository/tesla-fe-releases/</url> 
+	      <name>Tesla Releases Nexus Repository</name>
+	      <url>http://54.219.175.114:8081/africaunited/repository/frontwave-release/</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://52.53.227.31:8191/landmark/repository/tesla-fe-snapshots/</url>
+	      <name>Tesla Technologies Snapshot Nexus Repository </name>
+	      <url>http://54.219.175.114:8081/africaunited/repository/frontwave-snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
 	<build>
-		<finalName>tesla</finalName>
+		<finalName>Tesla_prod</finalName>
 		
 		<plugins>
 			<plugin>
